--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="content">
             <h1>Welcome to My Cape Trains LLP</h1>
-            <p>This is a responsive webpage with a large background picture and text boxes. Feel free to explore!</p>
+            <p> Reach us at trains@capetrainsllp.com or (508) 362-3838</p>
         </div>
     </div>
 </body>
