--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <h1>Welcome to My Cape Trains LLP</h1>
+            <h1>Welcome to Cape Trains LLP</h1>
             <p> Reach us at trains@capetrainsllp.com or (508) 362-3838</p>
         </div>
     </div>
